--- a/1.3
+++ b/1.3
@@ -13,3 +13,21 @@ public class Sort{
     return sort(s).equals(sort(t));
   }
 }
+
+//approach#2
+public boolean permutation(String s, String t){
+  if(s.length()!=t.length()){
+    return false; 
+  }
+  int[] letter = new int[256];
+  char[] s_array = s.toCharArray();
+  for(char c:s_array){
+    letter[c]++;
+  }
+  for(int i=0;i<t.length();i++){
+    if(--letter[(int)t.charAt(i)]<0){
+      return false;
+    }
+  }
+  return true;
+}
